[package]
name = "tx-engine"
version = "0.1.0"
edition = "2021"
authors = ["Ulisse Bordignon"]
description = "Toy transaction processing and account management engine"

[dependencies]
csv = "1.3.0"
derive-getters = "0.5.0"
derive_more = { version = "1.0.0", features = ["constructor"] }
serde = { version = "1.0.214", features = ["derive"] }
thiserror = "2.0.0"
